crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__snapshots@default_nondefault.jsonnet.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
assertion_line: 459
expression: v
input_file: crates/jrsonnet-peg-parser/src/tests/default_nondefault.jsonnet
---
LocalExpr(
    [
        Function {
            name: "x" from virtual:<test>:6-7,
            params: ExprParams {
                exprs: [
                    ExprParam {
                        destruct: Full(
                            "foo" from virtual:<test>:8-11,
                        ),
                        default: Some(
                            Trivial(
                                Str(
                                    "foo",
                                ),
                            ),
                        ),
                    },
                    ExprParam {
                        destruct: Full(
                            "bar" from virtual:<test>:21-24,
                        ),
                        default: None,
                    },
                ],
                signature: FunctionSignature(
                    [
                        ParamParse {
                            name: Named(
                                "foo",
                            ),
                            default: Exists,
                        },
                        ParamParse {
                            name: Named(
                                "bar",
                            ),
                            default: None,
                        },
                    ],
                ),
                binds_len: 2,
            },
            value: Trivial(
                Null,
            ),
        },
    ],
    Trivial(
        Null,
    ),
)
