crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__snapshots@multiline.jsonnet.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
assertion_line: 459
expression: v
input_file: crates/jrsonnet-peg-parser/src/tests/multiline.jsonnet
---
Arr(
    [
        Trivial(
            Str(
                "Hello world!\na\n",
            ),
        ),
        Trivial(
            Str(
                "Hello world!\na\n",
            ),
        ),
        Trivial(
            Str(
                "Hello world!\n\ta\n",
            ),
        ),
        Trivial(
            Str(
                "Hello world!\n a\n",
            ),
        ),
    ],
)
