crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__snapshots@string_escaping.jsonnet.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
assertion_line: 459
expression: v
input_file: crates/jrsonnet-peg-parser/src/tests/string_escaping.jsonnet
---
Arr(
    [
        Trivial(
            Str(
                "Hello, \"world\"!",
            ),
        ),
        Trivial(
            Str(
                "Hello 'world'!",
            ),
        ),
        Trivial(
            Str(
                "\\\\",
            ),
        ),
        Trivial(
            Str(
                "Hello\nWorld",
            ),
        ),
        Trivial(
            Str(
                "Hello\\n\"World\"",
            ),
        ),
    ],
)
