crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__snapshots@subexp.jsonnet.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
expression: v
input_file: crates/jrsonnet-peg-parser/src/tests/subexp.jsonnet
---
BinaryOp(
    BinaryOp {
        lhs: ObjExtend(
            Obj(
                MemberList(
                    ObjMembers {
                        locals: [],
                        asserts: [],
                        fields: [],
                    },
                ),
            ),
            MemberList(
                ObjMembers {
                    locals: [
                        Field {
                            into: Full(
                                "x" from virtual:<test>:11-12,
                            ),
                            value: Num(
                                1.0,
                            ),
                        },
                    ],
                    asserts: [],
                    fields: [
                        FieldMember {
                            name: Fixed(
                                "x",
                            ) from virtual:<test>:18-19,
                            plus: false,
                            params: None,
                            visibility: Normal,
                            value: Var(
                                "x" from virtual:<test>:21-22,
                            ),
                        },
                    ],
                },
            ),
        ),
        op: Add,
        rhs: Obj(
            MemberList(
                ObjMembers {
                    locals: [],
                    asserts: [],
                    fields: [],
                },
            ),
        ),
    },
)
